css: fix overflow problem in diffs

--- a/rhodecode/public/css/code-block.less
+++ b/rhodecode/public/css/code-block.less
@@ -391,6 +391,7 @@ td.injected_diff{
     div.code-body {
         max-width: 1124px;
         overflow-x: auto;
+        overflow-y: hidden;
         padding: 0;
     }
     div.diffblock {
